chore: update build, ci and doc scripts

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Boost.HTTP.Proto</title>
+        <title>Boost.WS.Proto</title>
         <meta http-equiv="refresh" content="0; URL=./doc/html/index.html">
     </head>
     <body>
@@ -8,7 +8,7 @@
         <a href="./doc/html/index.html">./doc/html/index.html</a>
         <hr>
         <tt>
-        Boost.HTTP.Proto<br>
+        Boost.WS.Proto<br>
         <br>
         Copyright&nbsp;(C)&nbsp;2019&nbsp;Vinnie&nbsp;Falco<br>
         <br>
